// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-material"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Material
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Light-Material
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="material-value"
  >
    <article
      className="inspector-item"
    >
      <div
        className="item-header"
      >
        <span
          className=""
        >
          Type
        </span>
      </div>
      <div
        className="item-content"
      >
        <select
          onChange={[Function]}
          value="0"
        >
          <option
            value="0"
          >
            basic_material
          </option>
          <option
            value="1"
          >
            light_material
          </option>
        </select>
      </div>
    </article>
    <div
      className=""
    >
      <article
        className="wonder-basic-material"
      >
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Color
          </div>
          <div
            className="item-content item-color"
          >
            <div
              className="color-hex"
              onClick={[Function]}
              style={
                Object {
                  "background": "#ffffff",
                }
              }
            />
            <div
              className="color-select"
              onClick={[Function]}
              title="color"
            >
              <img
                src="./public/img/color.png"
              />
            </div>
          </div>
        </article>
      </article>
    </div>
  </div>
</article>
`;

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-inspector-material"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Material
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Light-Material
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="material-value"
  >
    <article
      className="inspector-item"
    >
      <div
        className="item-header"
      >
        <span
          className=""
        >
          Type
        </span>
      </div>
      <div
        className="item-content"
      >
        <select
          onChange={[Function]}
          value="0"
        >
          <option
            value="0"
          >
            basic_material
          </option>
          <option
            value="1"
          >
            light_material
          </option>
        </select>
      </div>
    </article>
    <div
      className=""
    >
      <article
        className="wonder-basic-material"
      >
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Color
          </div>
          <div
            className="item-content item-color"
          >
            <div
              className="color-hex"
              onClick={[Function]}
              style={
                Object {
                  "background": "#ffffff",
                }
              }
            />
            <div
              className="color-select"
              onClick={[Function]}
              title="color"
            >
              <img
                src="./public/img/color.png"
              />
            </div>
          </div>
        </article>
      </article>
    </div>
  </div>
</article>
`;

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-inspector-material"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Material
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Light-Material
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="material-value"
  >
    <article
      className="inspector-item"
    >
      <div
        className="item-header"
      >
        <span
          className=""
        >
          Type
        </span>
      </div>
      <div
        className="item-content"
      >
        <select
          onChange={[Function]}
          value="1"
        >
          <option
            value="0"
          >
            basic_material
          </option>
          <option
            value="1"
          >
            light_material
          </option>
        </select>
      </div>
    </article>
    <div
      className=""
    >
      <article
        className="wonder-light-material"
      >
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffcuse color
          </div>
          <div
            className="item-content item-color"
          >
            <div
              className="color-hex"
              onClick={[Function]}
              style={
                Object {
                  "background": "#ffffff",
                }
              }
            />
            <div
              className="color-select"
              onClick={[Function]}
              title="diffuse color"
            >
              <img
                src="./public/img/color.png"
              />
            </div>
          </div>
        </article>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffuse map
          </div>
          <div
            className="item-content item-texture"
          >
            <div
              className="texture-img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
            </div>
            <button
              className="texture-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
          >
            Shininess
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="32"
            />
          </div>
        </article>
      </article>
    </div>
    <div
      className="material-shade"
    />
  </div>
</article>
`;
